# ooduck

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  __defs_2collection_8h.html  __defs_2collection_8h_source.html  __defs_2hashmap_8h.html  __defs_2hashmap_8h_source.html  __defs_2iterable_8h.html  __defs_2iterable_8h_source.html  __defs_2list_8h_source.html  __defs_2object_8h.html  __defs_2object_8h_source.html  __defs_2singleton_8h_source.html  __defs_2string_8h.html  __defs_2string_8h_source.html  __defs_2value_8h_source.html  __priv_2collection_8h.html  __priv_2collection_8h_source.html  __priv_2hashmap_8h.html  __priv_2hashmap_8h_source.html  __priv_2iterable_8h.html  __priv_2iterable_8h_source.html  __priv_2list_8h_source.html  __priv_2object_8h.html  __priv_2object_8h.js  __priv_2object_8h_source.html  __priv_2singleton_8h_source.html  __priv_2string_8h.html  __priv_2string_8h_source.html  __priv_2value_8h_source.html  annotated.html  annotated.js  asprintf_8h.html  asprintf_8h.js  asprintf_8h_source.html  class_abstract_error.html  class_class-members.html  (+123 more)
doc/: Doxyfile  Makefile  index.md  tutorial.md
include/ooduck/: asprintf.h  collection.h  define.h  e4c.h  exceptions.h  hashmap.h  iterable.h  list.h  object.h  singleton.h  string.h  value.h
include/ooduck/_defs/: collection.h  hashmap.h  iterable.h  list.h  object.h  singleton.h  string.h  value.h
include/ooduck/_priv/: collection.h  hashmap.h  iterable.h  list.h  object.h  singleton.h  string.h  value.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_9.js  classes_a.js  defines_0.js  defines_2.js  defines_4.js  defines_5.js  enums_0.js  enumvalues_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  (+37 more)
src/: asprintf.c  collection.c  config.h.in  e4c.c  exceptions.c  hashmap.c  iterable.c  list.c  main.c  object.c  singleton.c  string.c  value.c
test/: main.c
